# stock-market-visualizer

./: README.md  data.py  main.py  pyproject.toml  tickers.txt
