[tool.poetry]
name = "stock-market"
version = "0.1.0"
description = ""
authors = ["Rohan Phanse"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.5.1"
readchar = "^2.0.1"
yfinance = "^1.0."

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
